--- a/faq.html
+++ b/faq.html
@@ -145,7 +145,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_108" aria-expanded="false" aria-controls="collapse4">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Czy można zamówić dowolną ilość zaproszeń?</strong></h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Czy można zamówić dowolną liczbę zaproszeń?</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
