--- a/zaproszenie-las.html
+++ b/zaproszenie-las.html
@@ -105,7 +105,7 @@
                             Zaproszenie las<br><br></h5>
                         <p class="mbr-text mbr-fonts-style display-7">Zaproszenie z motywem lasu to zaproszenie, które przenosi gości w magiczny świat natury i tworzy atmosferę pełną harmonii i uroku.&nbsp;<br>
 <br>Motyw lasu na zaproszeniu tworzy wrażenie spokoju, odprężenia i bliskości z naturą, co idealnie pasuje do uroczystości związanych z miłością i świętowaniem ważnych chwil. Kolorystyka zaproszenia jest nasycona zielenią, brązami i odcieniami ziemi, aby oddać atmosferę naturalnego środowiska leśnego.<br>
-<br>Zaproszenie z motywem ajest nie tylko estetyczne, ale również przekazuje uczucie jedności z przyrodą i inspiruje do refleksji. To zaproszenie wprowadza gości w wyjątkową atmosferę, pełną tajemniczości i uroku.<br><br></p>
+<br>Zaproszenie z motywem jest nie tylko estetyczne, ale również przekazuje uczucie jedności z przyrodą i inspiruje do refleksji. To zaproszenie wprowadza gości w wyjątkową atmosferę, pełną tajemniczości i uroku.<br><br></p>
                         <div class="cost">
                             <span class="currentcost mbr-fonts-style pr-2 display-1">11 zł</span>
                             <span class="oldcost mbr-fonts-style display-2"></span>
@@ -190,7 +190,7 @@
                 
                 <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-4"><strong>
                     WYMIARY</strong><br></h4>
-                <p class="mbr-text mbr-fonts-style display-7">Zaproszenie - format B6, 12 x 17,5 cm<br>Wymiar mniejszej karty jest personalizowany w zależności od ilości treści<br></p>
+                <p class="mbr-text mbr-fonts-style display-7">Zaproszenie - format B6, 12 x 17 cm<br>Wymiar mniejszej karty jest personalizowany w zależności od ilości treści<br></p>
             </div>
         </div>
     </div>
