--- a/zaproszenia.html
+++ b/zaproszenia.html
@@ -94,7 +94,7 @@
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-1">
                     <strong>• Zaproszenia •</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">
-                    Poniżej galeria przykładowych realizacji zaproszeń.</h4>
+                    Poniżej znajdziesz galerię dotychczasowych realizacji – każde zaproszenie to osobna historia.</h4>
                 
             </div>
         </div>
