--- a/portrety.html
+++ b/portrety.html
@@ -93,7 +93,7 @@
             <div class="title col-md-12 col-lg-9">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-1">
                     <strong>• Portrety •</strong></h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Wykonuję cyfrowe stylizowane portrety ze zdjęć.</h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">Tworzę cyfrowe portrety na podstawie zdjęć – cennik, szczegóły i galerię prac znajdziesz poniżej.</h4>
                 
             </div>
         </div>
