--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             <a href="zaproszenia.html"><span class="mbr-iconfont mbrib-letter"></span></a>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong>ZAPROSZENIA</strong></h5>
-                        <p class="card-text mbr-fonts-style mb-0 display-7">Tworzę wyjątkowe zaproszenia na każdą okazję – pełne uroku, dopasowane do charakteru wydarzenia.<br>Niech Twoje wydarzenie zacznie się od<br>niepowtarzalnej zapowiedzi!</p>
+                        <p class="card-text mbr-fonts-style mb-0 display-7">Tworzę wyjątkowe zaproszenia na każdą okazję – pełne uroku, dopasowane do charakteru wydarzenia.<br>Niech Twoje wydarzenie zacznie się od niepowtarzalnej zapowiedzi!</p>
                     </div>
                 </div>
             </div><div class="item features-without-image mb-5 col-12 col-md-4">
