--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <a href="ilustracje.html"><span class="mbr-iconfont mbrib-image-gallery"></span></a>
                     </div>
                     <h5 class="card-title mbr-fonts-style display-7"><strong>ILUSTRACJE</strong></h5>
-                    <p class="card-text mbr-fonts-style mb-0 display-7">Przekształcam pomysły w wizualne arcydzieła!<br>Moje ilustracje dodają magii i wyjątkowości projektom, tworząc niezapomniane wrażenia w świecie wizualnej sztuki.</p>
+                    <p class="card-text mbr-fonts-style mb-0 display-7">Przekształcam pomysły w wizualne arcydzieła!Moje ilustracje dodają magii i wyjątkowości projektom, tworząc niezapomniane wrażenia w świecie wizualnej sztuki.</p>
                 </div>
             </div><div class="item features-without-image mb-5 col-12 col-md-4">
                 <div class="item-wrapper align-center">
