--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=W4wXCi"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=W4wXCi" type="text/css">
 
-  
+  <!-- weryfikacja meta -->
+  <meta name="facebook-domain-verification" content="l8lz9m8j087b5grmwg2b1ecesnhvuf" />
   
   
 </head>
