--- a/design.html
+++ b/design.html
@@ -205,7 +205,7 @@
                 
             </div><div class="col-12 col-md-6 col-lg-4 item gallery-image">
                 <div class="item-wrapper" data-toggle="modal" data-bs-toggle="modal" data-target="#uPe3HR30a4-modal" data-bs-target="#uPe3HR30a4-modal">
-                    <img class="w-100" src="assets/images/5-815x652.png" alt="Wirtualna Akademia" data-slide-to="11" data-bs-slide-to="11" data-target="#lb-uPe3HR30a4" data-bs-target="#lb-uPe3HR30a4">
+                    <img class="w-100" src="assets/images/5-815x652.png" alt="Baner_Jubistyl" data-slide-to="11" data-bs-slide-to="11" data-target="#lb-uPe3HR30a4" data-bs-target="#lb-uPe3HR30a4">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
