--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ src="https://www.facebook.com/tr?id=1981498695990336&ev=PageView&noscript=1"
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4"></p>
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">© Agnieszka Kowalec 2025</p>
             </div>
         </div>
     </div>
