--- a/dostawa-i-platnosc.html
+++ b/dostawa-i-platnosc.html
@@ -201,7 +201,7 @@ Kurier InPost -&nbsp; 20 zł</strong><br><br>Darmowa dostawa dla kwoty zamówien
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4"></p>
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">© Agnieszka Kowalec 2025</p>
             </div>
         </div>
     </div>
